# fautil-scaffold

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  pytest.ini  项目规范文档.md
examples/: .env.example  README.md  config.json  config.yaml
src/: wsgi.py
src/controller/: user.py
src/core/: __init__.py  backoff.py  cbv.py  config.py  context.py  setup.py
src/dao/: user_protocol.py
src/dao/impl/: user.py
src/model/: user.py
src/service/: user_protocol.py
src/service/impl/: user.py
tests/: conftest.py  test_func.py  test_setup.py  test_user_api_integration.py  test_user_controller.py  test_user_dao.py  test_user_service.py
tests/core/: test_config.py  test_config_advanced.py
tests/core/test_configs/: config.json  config.yaml
