[project]
name = "lfun-test"
version = "0.1.0"
description = "test project to use FastAPI,SQLAlchemy etc."
authors = [
    {name = "alpha",email = "alphaqiu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "sqlalchemy[asyncio] (>=2.0.38,<3.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "injector (>=0.22.0,<0.23.0)",
    "pyyaml (>=6.0.0,<7.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "toml (>=0.10.2,<0.11.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.25.3"
black = "25.1.0"
pylint = "^3.3.4"
pre-commit = ">=4.1.0,<5.0.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
